Oppdatert test